CS bug squashed!

--- a/projects/jarvis/css/style.css
+++ b/projects/jarvis/css/style.css
@@ -97,7 +97,7 @@ h6{
     position: fixed;
     z-index: 10;
     height: 90px;
-    background-color:#0011fd;
+    background-color:#fd4500;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
